--- a/scripts/graficoMappaMondiale.ipynb
+++ b/scripts/graficoMappaMondiale.ipynb
@@ -26,7 +26,7 @@
     "file_path = \"fide_stats.xltx\"\n",
     "\n",
     "# Leggi il file Excel e crea un DataFrame\n",
-    "df = pd.read_excel(file_path)\n"
+    "df = pd.read_excel(file_path);\n"
    ]
   },
   {
